[package]
name = "everdrive-test"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
byteorder = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
derive_more = { version = "0.99", default-features = false, features = ["from"] }
enum-iterator = "2"
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
serialport = "4"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
