[package]
name = "everdrive-test"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[profile.release]
lto = true
strip = true

[dependencies]
arrayref = "0.3.7"
byteorder = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
enum-iterator = "2"
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
serialport = "4"
thiserror = "1.0.58"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
