[package]
name = "everdrive-test"
version = "0.1.0"
authors = ["Fenhl <fenhl@fenhl.net>"]
edition = "2021"

[lints.rust]
rust_2018_idioms = "deny"
unsafe_code = "forbid"
unused = "deny"
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"
warnings = "deny"

[profile.release]
lto = true
strip = true

[dependencies]
arrayref = "0.3.7"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
enum-iterator = "2"
ootr-utils = { git = "https://github.com/midoshouse/rust-ootr-utils", branch = "main" }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["io-util", "time"] }
tokio-serial = "5.4.4"
wheel = { git = "https://github.com/fenhl/wheel", branch = "main" }
